- fixed align-items, fixed text, add a tag in column

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,7 +552,7 @@
 #works-page .sec-works .works-item-row .right-works-txt .works-list,
 #works-detail-page .sec-works-detail .works-detail-txt .works-list-group .works-list {
   display: flex;
-  align-items: flex-start;
+  align-items: baseline;
   padding-bottom: 15px;
 }
 
